--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Youtube</title>
+    <title>Youtube2</title>
     <meta name="description" content="">
     <!-- build:css app.min.css -->
     <!-- bower:css -->
